update css in web

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
         </nav>
         <!-- navbar end -->
-
+        
         <!-- Crousel Start -->
         <div id="carouselExampleIndicators" class="carousel slide">
             <div class="carousel-indicators">
@@ -109,7 +109,7 @@
         <!-- Crousel End -->
     </header>
 
-   
+    <h1>Hello in CICD world!</h1>
     <!-- Card start -->
     <div class="container " style="margin: 100px auto;">
         <div class="row">
@@ -227,7 +227,7 @@
     <!-- Accordian End -->
 
     <!-- Footer Start -->
-    <footer class="text-center text-lg-start bg-dark  text-white">
+    <footer class="text-center text-lg-start bg-primary  text-white">
         <!-- Section: Social media -->
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
             <!-- Left -->
