--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <!-- Crousel End -->
     </header>
 
-    <h1 style="text-align: center;">Hello in CICD world!</h1>
+    <h1 style="text-align: center;">Hello in PAK world!</h1>
     <!-- Card start -->
     <div class="container " style="margin: 100px auto;">
         <div class="row">
